# SensorsSimulation

./: CMakeLists.txt
inc/: CircBuffer.hpp  IObserver.hpp  ISubject.hpp  Logger.hpp  MainNode.hpp  RandomMeasGenerator.hpp  Sensor.hpp
src/: CircBuffer.cpp  Logger.cpp  MainNode.cpp  RandomMeasGenerator.cpp  Sensor.cpp  main.cpp
